--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f51dd1d3",
+   "id": "712d41c1",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a56b2c5c",
+   "id": "f3864a1c",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8db7d5b6",
+   "id": "e81609a9",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1990a3ea",
+   "id": "2fadb04f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "16157548",
+   "id": "7643c92c",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c563bdf4",
+   "id": "9e694957",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beb64f2e",
+   "id": "7f32fd2c",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d89fd644",
+   "id": "8ff83af7",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3f664400",
+   "id": "61fe9f18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "31806024",
+   "id": "0e2197f1",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c967be89",
+   "id": "0ff4c6c5",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "af16531d",
+   "id": "b649e84e",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "66069950",
+   "id": "6c65b51c",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2634bb98",
+   "id": "9639b9fb",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "09214bbe",
+   "id": "17bf172e",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "191318ba",
+   "id": "0f092455",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "00116d0f",
+   "id": "2d107183",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b797d56c",
+   "id": "b7b53e00",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3b4f48f3",
+   "id": "22536265",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b5d7edfd",
+   "id": "a2e7d9cb",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "434838c9",
+   "id": "10b85a26",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "233e8dfa",
+   "id": "6d84ae31",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fb9fdc3a",
+   "id": "26068aee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ef463f7d",
+   "id": "b0652550",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "cb418f9a",
+   "id": "a6633acd",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9cc4b763",
+   "id": "8e768d14",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7febf1d2",
+   "id": "30d9a109",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "031f72bb",
+   "id": "289af2e8",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "160d7609",
+   "id": "f3427152",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9336a30b",
+   "id": "b8414792",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fed0a47a",
+   "id": "ffc61116",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3036fcae",
+   "id": "649cf0fb",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7e17e764",
+   "id": "02ee89f2",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e88405fc",
+   "id": "d5fc7030",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "58a689d2",
+   "id": "a6c189d1",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b70adfa",
+   "id": "d6f4fe60",
    "metadata": {},
    "source": [
     "# Dicts are always key -> value\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "24076af9",
+   "id": "f70480c7",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da770a3c",
+   "id": "72927349",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32efcd41",
+   "id": "8626b6b2",
    "metadata": {},
    "source": [
     "# Dicts for accumulation (paradigm 2)\n",
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "2a6050fa",
+   "id": "6c5abf37",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efa43845",
+   "id": "52c54eb2",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (dict edition)\n",
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "10497d51",
+   "id": "0740b7d7",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "0164239d",
+   "id": "39b49c1f",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "837003eb",
+   "id": "9f13dd8d",
    "metadata": {},
    "source": [
     "# Accumulating the unknown (paradigm 3)\n",
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "9af818fd",
+   "id": "890d6a18",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "69eb3f6d",
+   "id": "e55207b7",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "3044c926",
+   "id": "2c238e6c",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db14cb9e",
+   "id": "105f096c",
    "metadata": {},
    "source": [
     "# Rainfall \n",
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "0a4c98be",
+   "id": "c0a20db3",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62ac110e",
+   "id": "618eb349",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bb19524",
+   "id": "d360a2cc",
    "metadata": {},
    "source": [
     "# Looping over dicts\n",
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "478805d1",
+   "id": "e1822d6d",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d22ec84d",
+   "id": "d2739e05",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "7742c649",
+   "id": "3f872bb7",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "44823d48",
+   "id": "a607d696",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "bbef50d2",
+   "id": "1f696d82",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "3f708fd3",
+   "id": "a6c1f05e",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "01f66235",
+   "id": "ad228848",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "747dc47b",
+   "id": "a95a13b7",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "fd6371e6",
+   "id": "e483848a",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "4286f3ba",
+   "id": "8459bdce",
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "ccf9eb5a",
+   "id": "f8500385",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "725ad200",
+   "id": "b5f5c4b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95f2d0ef",
+   "id": "d6f6a43f",
    "metadata": {},
    "source": [
     "# Exercise: Age statistics\n",
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "d255bcae",
+   "id": "4d34adec",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8634b816",
+   "id": "5b0c9467",
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "2549a5ce",
+   "id": "d6e65c13",
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5a214e3",
+   "id": "85e4b0f5",
    "metadata": {},
    "source": [
     "# How do dictionaries work?\n",
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f036260d",
+   "id": "83bab5d1",
    "metadata": {},
    "source": [
     "# Files\n",
@@ -1664,7 +1664,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "631af789",
+   "id": "2cfbd0c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "c0606f79",
+   "id": "5f226c0a",
    "metadata": {},
    "outputs": [
     {
@@ -2111,7 +2111,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "d29f01b3",
+   "id": "e088098b",
    "metadata": {},
    "outputs": [
     {
@@ -2542,7 +2542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28209377",
+   "id": "61e2ce61",
    "metadata": {},
    "source": [
     "# Exercise: Word count\n",
@@ -2561,7 +2561,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "8f2c8cb9",
+   "id": "a134e656",
    "metadata": {},
    "outputs": [
     {
@@ -2589,7 +2589,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "248a3e0d",
+   "id": "820891bc",
    "metadata": {
     "scrolled": true
    },
@@ -2628,7 +2628,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "0411fc76",
+   "id": "c7892dee",
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67f99bfa",
+   "id": "24b7d363",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2678,7 +2678,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "455ebd1f",
+   "id": "e4e0c809",
    "metadata": {},
    "outputs": [
     {
@@ -2761,7 +2761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36f022c6",
+   "id": "54a6c951",
    "metadata": {},
    "source": [
     "# Exercise: Summing numbers\n",
@@ -2778,7 +2778,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "c3ded5c9",
+   "id": "31cbe135",
    "metadata": {},
    "outputs": [
     {
@@ -2801,7 +2801,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "34261917",
+   "id": "c7671c92",
    "metadata": {},
    "outputs": [
     {
@@ -2822,7 +2822,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "985f6c8f",
+   "id": "e63abfab",
    "metadata": {},
    "outputs": [
     {
@@ -2843,7 +2843,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "e04bffe9",
+   "id": "7bb830bb",
    "metadata": {},
    "outputs": [
     {
@@ -2869,7 +2869,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "56360c73",
+   "id": "c6811ad7",
    "metadata": {},
    "outputs": [
     {
@@ -2894,7 +2894,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "c5214ae5",
+   "id": "f0137e20",
    "metadata": {},
    "outputs": [
     {
@@ -2917,7 +2917,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "804acb10",
+   "id": "162c551b",
    "metadata": {},
    "outputs": [
     {
@@ -2938,7 +2938,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fe54b77",
+   "id": "9874488c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2951,7 +2951,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "6ceba8e9",
+   "id": "7b9f483b",
    "metadata": {},
    "outputs": [
     {
@@ -2973,7 +2973,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "6e2c7133",
+   "id": "1a12ea27",
    "metadata": {},
    "outputs": [
     {
@@ -2994,7 +2994,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "1e41a45d",
+   "id": "dde6ec00",
    "metadata": {},
    "outputs": [
     {
@@ -3015,7 +3015,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "ea0c7a7f",
+   "id": "c6a78351",
    "metadata": {},
    "outputs": [
     {
@@ -3037,7 +3037,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0c9ba51",
+   "id": "780d0a33",
    "metadata": {},
    "source": [
     "# Writing to files\n",
@@ -3055,7 +3055,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "13c63323",
+   "id": "410b4b9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3065,7 +3065,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "77a83e45",
+   "id": "97ef7df4",
    "metadata": {},
    "outputs": [
     {
@@ -3086,7 +3086,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "0ea07212",
+   "id": "af8b32f7",
    "metadata": {},
    "outputs": [
     {
@@ -3107,7 +3107,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "ee123fee",
+   "id": "1c44711c",
    "metadata": {},
    "outputs": [
     {
@@ -3128,7 +3128,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "c4b6a32e",
+   "id": "c15cd8ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3140,7 +3140,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "b7c3f0c6",
+   "id": "43f0e382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3157,7 +3157,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "a015b60d",
+   "id": "0350782d",
    "metadata": {},
    "outputs": [
     {
@@ -3176,7 +3176,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "c043add2",
+   "id": "c843a2b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3184,9 +3184,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a754789",
+   "metadata": {},
+   "source": [
+    "The `with` keyword in Python is useful in a number of ways, but the most common one is to open a file (especially for writing), such that after the `with` block, the file is automatically flushed and closed.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "91e72822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('myfile.txt', 'w') as f:  \n",
+    "    # inside of this block, we can write to f\n",
+    "    \n",
+    "    f.write('hello 12345\\n')\n",
+    "    \n",
+    "    f.write('!!!')\n",
+    "\n",
+    "    # as the block is closing, the file will be flushed and closed -- guaranteeing the buffer is empty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "835916be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello 12345\r\n",
+      "!!!"
+     ]
+    }
+   ],
+   "source": [
+    "!cat myfile.txt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea2b6155",
+   "id": "8014c849",
    "metadata": {},
    "outputs": [],
    "source": []
