--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "712d41c1",
+   "id": "869aaeb3",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3864a1c",
+   "id": "9a377e57",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e81609a9",
+   "id": "aa9d1f64",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2fadb04f",
+   "id": "d06fd5c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7643c92c",
+   "id": "4a833de5",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9e694957",
+   "id": "452dbd75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f32fd2c",
+   "id": "f493b3b0",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ff83af7",
+   "id": "51335476",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "61fe9f18",
+   "id": "c96aba52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0e2197f1",
+   "id": "d5a5e919",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0ff4c6c5",
+   "id": "3fdaee64",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b649e84e",
+   "id": "259e61e7",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6c65b51c",
+   "id": "432f4efe",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9639b9fb",
+   "id": "795bf654",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "17bf172e",
+   "id": "666ef1fe",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0f092455",
+   "id": "a250549d",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2d107183",
+   "id": "e90d6f0e",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7b53e00",
+   "id": "75b6abd0",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "22536265",
+   "id": "d833f144",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a2e7d9cb",
+   "id": "0e3c2353",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "10b85a26",
+   "id": "4c87b72d",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d84ae31",
+   "id": "d8a2a650",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "26068aee",
+   "id": "9adedb86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b0652550",
+   "id": "09ca3e29",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a6633acd",
+   "id": "1bed6e47",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8e768d14",
+   "id": "fd90edf8",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "30d9a109",
+   "id": "4726c3b8",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "289af2e8",
+   "id": "910e5c3b",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f3427152",
+   "id": "24681af7",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8414792",
+   "id": "6efcd51e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ffc61116",
+   "id": "fdf819b2",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "649cf0fb",
+   "id": "4689d392",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "02ee89f2",
+   "id": "347d9f09",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d5fc7030",
+   "id": "db8ae598",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a6c189d1",
+   "id": "9716e2d3",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f4fe60",
+   "id": "ee672855",
    "metadata": {},
    "source": [
     "# Dicts are always key -> value\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "f70480c7",
+   "id": "50165bb7",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72927349",
+   "id": "778347f2",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8626b6b2",
+   "id": "daf65a55",
    "metadata": {},
    "source": [
     "# Dicts for accumulation (paradigm 2)\n",
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6c5abf37",
+   "id": "8a3b4699",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52c54eb2",
+   "id": "cd91556b",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (dict edition)\n",
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0740b7d7",
+   "id": "176bcfb2",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "39b49c1f",
+   "id": "15577abb",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f13dd8d",
+   "id": "a81dd99e",
    "metadata": {},
    "source": [
     "# Accumulating the unknown (paradigm 3)\n",
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "890d6a18",
+   "id": "afd55f7b",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "e55207b7",
+   "id": "5c5e238b",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "2c238e6c",
+   "id": "fc838682",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "105f096c",
+   "id": "08e278e3",
    "metadata": {},
    "source": [
     "# Rainfall \n",
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c0a20db3",
+   "id": "012b809f",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "618eb349",
+   "id": "21a90978",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d360a2cc",
+   "id": "c06f0aa1",
    "metadata": {},
    "source": [
     "# Looping over dicts\n",
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e1822d6d",
+   "id": "20f9ca70",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d2739e05",
+   "id": "a46a5538",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "3f872bb7",
+   "id": "7c5b6430",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a607d696",
+   "id": "3bb1f34a",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "1f696d82",
+   "id": "14ab7089",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "a6c1f05e",
+   "id": "4c15a526",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "ad228848",
+   "id": "cd1ada36",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "a95a13b7",
+   "id": "57cb262e",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "e483848a",
+   "id": "dd1b256f",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "8459bdce",
+   "id": "9da2300c",
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "f8500385",
+   "id": "ab839a35",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5f5c4b2",
+   "id": "67019ba6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f6a43f",
+   "id": "6b828a9d",
    "metadata": {},
    "source": [
     "# Exercise: Age statistics\n",
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "4d34adec",
+   "id": "8f6f148f",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "5b0c9467",
+   "id": "d56f54b0",
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "d6e65c13",
+   "id": "3d4cd060",
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85e4b0f5",
+   "id": "6a7f82d1",
    "metadata": {},
    "source": [
     "# How do dictionaries work?\n",
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83bab5d1",
+   "id": "4583b161",
    "metadata": {},
    "source": [
     "# Files\n",
@@ -1664,7 +1664,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "2cfbd0c5",
+   "id": "a8d6a3fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "5f226c0a",
+   "id": "a11cd169",
    "metadata": {},
    "outputs": [
     {
@@ -2111,7 +2111,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "e088098b",
+   "id": "e31f3b08",
    "metadata": {},
    "outputs": [
     {
@@ -2542,7 +2542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61e2ce61",
+   "id": "7551c44b",
    "metadata": {},
    "source": [
     "# Exercise: Word count\n",
@@ -2561,7 +2561,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "a134e656",
+   "id": "b3b50fc7",
    "metadata": {},
    "outputs": [
     {
@@ -2589,7 +2589,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "820891bc",
+   "id": "aea3bd66",
    "metadata": {
     "scrolled": true
    },
@@ -2628,7 +2628,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "c7892dee",
+   "id": "a8414e17",
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24b7d363",
+   "id": "59c59f68",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2678,7 +2678,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "e4e0c809",
+   "id": "8cdbb3da",
    "metadata": {},
    "outputs": [
     {
@@ -2761,7 +2761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54a6c951",
+   "id": "bee01985",
    "metadata": {},
    "source": [
     "# Exercise: Summing numbers\n",
@@ -2778,7 +2778,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "31cbe135",
+   "id": "7459dd50",
    "metadata": {},
    "outputs": [
     {
@@ -2801,7 +2801,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "c7671c92",
+   "id": "70a5029e",
    "metadata": {},
    "outputs": [
     {
@@ -2822,7 +2822,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "e63abfab",
+   "id": "d43555ee",
    "metadata": {},
    "outputs": [
     {
@@ -2843,7 +2843,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "7bb830bb",
+   "id": "adaefaf8",
    "metadata": {},
    "outputs": [
     {
@@ -2869,7 +2869,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "c6811ad7",
+   "id": "340ac446",
    "metadata": {},
    "outputs": [
     {
@@ -2894,7 +2894,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "f0137e20",
+   "id": "c48c8b99",
    "metadata": {},
    "outputs": [
     {
@@ -2917,7 +2917,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "162c551b",
+   "id": "7f47f3ad",
    "metadata": {},
    "outputs": [
     {
@@ -2938,7 +2938,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9874488c",
+   "id": "74646b97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2951,7 +2951,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "7b9f483b",
+   "id": "72d298ae",
    "metadata": {},
    "outputs": [
     {
@@ -2973,7 +2973,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "1a12ea27",
+   "id": "5262b5ce",
    "metadata": {},
    "outputs": [
     {
@@ -2994,7 +2994,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "dde6ec00",
+   "id": "fa84d084",
    "metadata": {},
    "outputs": [
     {
@@ -3015,7 +3015,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "c6a78351",
+   "id": "5527c7a3",
    "metadata": {},
    "outputs": [
     {
@@ -3037,7 +3037,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "780d0a33",
+   "id": "5946f3f2",
    "metadata": {},
    "source": [
     "# Writing to files\n",
@@ -3055,7 +3055,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "410b4b9e",
+   "id": "c4b44593",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3065,7 +3065,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "97ef7df4",
+   "id": "3437277c",
    "metadata": {},
    "outputs": [
     {
@@ -3086,7 +3086,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "af8b32f7",
+   "id": "c9ba775a",
    "metadata": {},
    "outputs": [
     {
@@ -3107,7 +3107,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "1c44711c",
+   "id": "c720c1c5",
    "metadata": {},
    "outputs": [
     {
@@ -3128,7 +3128,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "c15cd8ac",
+   "id": "928535ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3140,7 +3140,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "43f0e382",
+   "id": "6729b55e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3157,7 +3157,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "0350782d",
+   "id": "f5cb9fe7",
    "metadata": {},
    "outputs": [
     {
@@ -3176,7 +3176,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "c843a2b3",
+   "id": "70dd8ecb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3185,7 +3185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a754789",
+   "id": "efb8bf70",
    "metadata": {},
    "source": [
     "The `with` keyword in Python is useful in a number of ways, but the most common one is to open a file (especially for writing), such that after the `with` block, the file is automatically flushed and closed.\n",
@@ -3194,11 +3194,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "91e72822",
+   "execution_count": 101,
+   "id": "a60d95b1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# open takes two arguments:\n",
+    "# (1) filename\n",
+    "# (2) mode -- 'r' (reading), 'w' (writing), 'a' (appending), etc.\n",
+    "\n",
+    "# if you want to write to a file, you'll likely use 'w'.  We open the file in the context\n",
+    "# of the \"with\" statement, and that ensures the file is flushed and close by the end of the block.\n",
+    "\n",
     "with open('myfile.txt', 'w') as f:  \n",
     "    # inside of this block, we can write to f\n",
     "    \n",
@@ -3212,7 +3219,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "835916be",
+   "id": "a33eea2a",
    "metadata": {},
    "outputs": [
     {
@@ -3231,7 +3238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8014c849",
+   "id": "0178c472",
    "metadata": {},
    "outputs": [],
    "source": []
