--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,19 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6ccf3648",
+   "id": "5aaa4d0d",
    "metadata": {},
    "source": [
-    "# Agenda, day 4: Functions!"
+    "# Agenda, day 4: Functions!\n",
+    "\n",
+    "- What are functions? Why do we need them?\n",
+    "- Writing simple functions with `def`\n",
+    "- Arguments and parameters\n",
+    "- Return values\n",
+    "- Default argument values\n",
+    "- Complex return values\n",
+    "- Local vs. global variables\n",
+    "- Online challenge"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb52b8b3",
+   "cell_type": "markdown",
+   "id": "570d4733",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# What are functions?\n",
+    "\n",
+    "We've already seen that functions (and methods) are the *verbs* in a programming language. They do things to the data structures."
+   ]
   }
  ],
  "metadata": {
