--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5aaa4d0d",
+   "id": "fa26aa8e",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,13 +19,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "570d4733",
+   "id": "f114bcc4",
    "metadata": {},
    "source": [
     "# What are functions?\n",
     "\n",
-    "We've already seen that functions (and methods) are the *verbs* in a programming language. They do things to the data structures."
+    "We've already seen that functions (and methods) are the *verbs* in a programming language. They do things to the data structures.\n",
+    "\n",
+    "Examples:\n",
+    "\n",
+    "```python\n",
+    "x = 'abcde'\n",
+    "len(x)   # we \"call\" the \"len\" function on the data x, and get back an integer (5)\n",
+    "\n",
+    "x.upper()  # we \"call\" the \"upper\" method on the data x, and get back a string ('ABCDE')\n",
+    "```\n",
+    "\n",
+    "We call a function/method, and we get back a value.\n",
+    "\n",
+    "Sometimes, we don't care about the value we get back.  Instead, we care about what the function is doing to the data structure.  In many cases, such functions change the data structure.\n",
+    "\n",
+    "For example:\n",
+    "\n",
+    "```python\n",
+    "mylist = [10, 20, 30]\n",
+    "\n",
+    "mylist.append(40)   # the result of calling mylist.append is to change mylist. It returns None\n",
+    "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fca2985b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
